[package]
name = "network-semaphore"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.10.1"
clap = { version = "4.5.40", features = ["derive"] }
dashmap = { version = "6.1.0", features = ["serde"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
system_shutdown = "4.0.1"
tokio = { version = "1.45.1", features = ["net", "macros", "rt", "time", "sync", "io-util", "fs"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["codec"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[target.x86_64-unknown-linux-musl]
linker = "musl-gcc"
